--- a/style.css
+++ b/style.css
@@ -24,16 +24,63 @@ html {
 h1 {
     text-align: center;
     padding: 1.5rem 2.5rem;
+    background-image: linear-gradient(120deg, #ce7bda 0%, #a6c1ee 100%);
+    margin: 0 0 2rem 0;
+    font-size: 1.5rem;
+    color: white;
+}
+
+p {
+  padding: 0 2.5rem 0 2.5rem;
+  margin: 0;
 }
 
 img {
    display: block;
    margin: 1rem, auto;
    max-width: 100%;
+   
 
 }
 
 .card {
-
+    margin: 1rem;
+    background: white;
+    box-shadow: 2px 4px 25px rgba(0, 0, 0, .1);
+    border-radius: 12px;
+    overflow: hidden;
+ 
 }
+
+.card:hover {
+    box-shadow: 2px 8px 45px rgba(0, 0, 0, .15);
+    transform: translate3d(0, -8px, 0);
+    transition: all .2s linear;
+}
+
+@media all and (min-width: 600px) {
+    .card {
+      flex: 1 1 calc(50% - 2rem);
+    }
+  }
+
+@media all and (min-width: 900px) {
+    .card {
+        flex: 1 1 calc(33% - 2rem);
+        
+    }
+}
+
+.card:nth-child(2n) h1 {
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+}
+
+.card:nth-child(4n) h1 {
+  background-image: linear-gradient(120deg, #ff9a9e 0%, #fecfef 100%);
+}
+
+.card:nth-child(5n) h1 {
+  background-image: linear-gradient(120deg, #ffc3a0 0%, #ffafbd 100%);
+}
+
 
